- c_utils.c: reworked play_sound() not to use strcpy(3)
- c_utils.c: added recommended includes
- lots of spellcheck fixes in code and docs
- docs: upgrade URLs from http: to https:
v 0.3.4
- fix for SDL initializing the soundcard even with NOSOUND=1
v 0.3.3
- DEBUG=1 environment variable to show initialization info
- NOSOUND=1 environment variable to skip initializing audio
- cosmetic fixes in error messages and docs update
v 0.3.2
- 'ironseed' symlinks for binary and manpage
v 0.3.1
- fix sound effects filename case
v 0.3.0
- 32-bit compilation fixes (now works on i386 too)
- document location of manual in manpage
v 0.2.9
- added FreeDesktop menu entry
- remove unused .ogg sounds to save space in this fork
v 0.2.8
- use 'gm' for conversion to .tga, due to Debian bug https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=974750
v 0.2.7
- move debian/* packaging to https://salsa.debian.org/mnalis/ironseed
v 0.2.6
- Debian menu, and other Debian packaging tweaks
- add compile flags for hardening (see https://wiki.debian.org/Hardening)
- fix wrong diskfree calculation leading to failing to find tempdir/savedir
v 0.2.5
- update Debian package info only, no code changes
v 0.2.2
- open files read-only when changes not needed (so we can have root-owned system data files!)
- create Debian package via 'make deb'
v 0.2.1
- able to be installed and run from any dir
- savegames now reside in ~/.local/share/ironseed or ~/.ironseed !
v 0.2.0
- build: allow installing game to final location
- code: use TMPDIR for temp files
- build: scripts to regenerate last of data/* binary files
v 0.1.9
- Makefile: regenerate most .cpr images from .png
- image conversion tools handle .tga & .cpr files without embedded PAL and with different sizes, and partial PAL support
- restore some easter eggs
- restore some missing logs
- restore some missing conversation parts
v 0.1.8
- fix endgame running without pause to read text!
- fix bug with removing wrong items sometimes!